# quick-imps

./: README.md
algs/: graph_search.py  max_flow_min_cut.py
algs/dynamic_programming/: rod_cutting.py
comp_geo/: chans_ch_time.py
comp_vision/2D_alignment_from_landmarks/: main.cpp
comp_vision/active_contour/: CMakeLists.txt  characterization.cpp  characterization.hpp  main.cpp  utils.cpp  utils.hpp  vectorize.cpp  vectorize.hpp
comp_vision/active_contour/data/: init.txt
comp_vision/active_contour_edge_based/: CMakeLists.txt  characterization.cpp  characterization.hpp  edge_based_active_contour.cpp  edge_based_active_contour.hpp  main.cpp  utils.cpp
comp_vision/active_contour_region_based/: chan_vese_active_contour.cpp  chan_vese_active_contour.hpp  characterization.cpp  characterization.hpp  main.cpp
comp_vision/active_contour_region_based_localized/: characterization.hpp  lankton_active_contour.cpp  lankton_active_contour.hpp  main.cpp  tmp  utils.cpp  utils.hpp
comp_vision/alignment_from_landmarks/: analysis.cpp  analysis.hpp  main.cpp
comp_vision/alignment_from_landmarks/data/: orientation1.txt  orientation2.txt
comp_vision/background_subtraction/: CMakeLists.txt  main.cpp
comp_vision/connected_component_merging/: main.cpp
comp_vision/echo_center_point_detection/: CMakeLists.txt  main.cpp
comp_vision/vectorization_from_flood_fill/: CMakeLists.txt  analysis.cpp  main.cpp  segmentation.cpp  utils.cpp
dynamic_programming/: longest_palindrome.py
general_algs/: heapify_compare.py
